Backend/k8s/user-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-service
  namespace: e-agri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-service
  template:
    metadata:
      labels:
        app: user-management-service
    spec:
      containers:
      - name: user-management-service
        image: e-agri/user-management-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
  namespace: e-agri
spec:
  selector:
    app: user-management-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
